--- a/package.json
+++ b/package.json
@@ -9,16 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.12.0",
+    "disable-scroll": "^0.6.0",
     "next": "12.1.4",
+    "next-auth": "^4.3.1",
+    "phosphor-react": "^1.4.1",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-hooks-use-modal": "^2.1.0",
+    "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
-    "eslint": "8.12.0",
+    "autoprefixer": "^10.4.4",
+    "eslint": "^8.13.0",
     "eslint-config-next": "12.1.4",
+    "eslint-config-prettier": "^8.5.0",
+    "postcss": "^8.4.12",
+    "prisma": "^3.12.0",
+    "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
+  },
+  "prisma": {
+    "schema": "schema.prisma"
   }
 }
