--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
 NEXTAUTH_URL=http://127.0.0.1:3000
 
-GOOGLE_ID="660539645218-3njomnurd1ta7f7ml162v8ruq8dl80s7.apps.googleusercontent.com"
-GOOGLE_SECRET="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"
+GOOGLE_ID=660539645218-3njomnurd1ta7f7ml162v8ruq8dl80s7.apps.googleusercontent.com
+GOOGLE_SECRET=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
+EMAIL_SERVER_USER=apikey
+EMAIL_SERVER_PASSWORD=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
+EMAIL_SERVER_HOST=smtp.sendgrid.net
+EMAIL_SERVER_PORT=587
+EMAIL_FROM=soueuaqui123456789@gmail.com
 
 DATABASE_URL='mysql://yzxrwqn73m3w:pscale_pw_-phI5hncnQUB5lmNffshsTJy5XykpCmSsMb9_OCm45Q@op325cr2ht3v.eu-central-1.psdb.cloud/nogueirabar?sslaccept=strict'
+
