--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "disable-scroll": "^0.6.0",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
+    "nodemailer": "^6.7.3",
     "phosphor-react": "^1.4.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
