--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.8",
     "@next-auth/prisma-adapter": "^1.0.3",
     "@prisma/client": "^3.12.0",
+    "@themesberg/tailwind-datepicker": "^1.1.0",
     "disable-scroll": "^0.6.0",
     "next": "12.1.4",
     "next-auth": "^4.3.1",
@@ -19,6 +21,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hooks-use-modal": "^2.1.0",
+    "react-social-login-buttons": "^3.6.0",
     "reactjs-popup": "^2.0.5"
   },
   "devDependencies": {
