fix some host bugs

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+ADMIN_EMAIL=soueuaqui123456789@gmail.com
 NEXTAUTH_URL=http://127.0.0.1:3000
 
 GOOGLE_ID='660539645218-3njomnurd1ta7f7ml162v8ruq8dl80s7.apps.googleusercontent.com'
@@ -13,4 +14,3 @@ FACEBOOK_CLIENT_SECRET="104218c08e478c0f3b29b2401b8e7105"
 
 DATABASE_URL='mysql://yzxrwqn73m3w:pscale_pw_-phI5hncnQUB5lmNffshsTJy5XykpCmSsMb9_OCm45Q@op325cr2ht3v.eu-central-1.psdb.cloud/nogueirabar?sslaccept=strict'
 
-ADMIN_EMAIL='soueuaqui123456789@gmail.com'
