--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
     "autoprefixer": "^10.4.4",
+    "babel-plugin-inline-import-data-uri": "^1.0.1",
     "eslint": "^8.13.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.5.0",
