--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 ADMIN_EMAIL=soueuaqui123456789@gmail.com
 NEXTAUTH_URL=http://127.0.0.1:3000
+VERCEL_URL=https://nogueira-bar-web-site.vercel.app
+FDS_SECRET=BWQ09Rr1E5EWtn93xEeJO7PzwTr6LPM/qxKR4SYSaBs=
 
 GOOGLE_ID='660539645218-3njomnurd1ta7f7ml162v8ruq8dl80s7.apps.googleusercontent.com'
 GOOGLE_SECRET=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
