--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 ADMIN_EMAIL=soueuaqui123456789@gmail.com
-NEXTAUTH_URL=http://127.0.0.1:3000
+# NEXTAUTH_URL=http://127.0.0.1:3000
 VERCEL_URL=https://nogueira-bar-web-site.vercel.app
 FDS_SECRET=BWQ09Rr1E5EWtn93xEeJO7PzwTr6LPM/qxKR4SYSaBs=
 
