--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-hooks-use-modal": "^2.1.0",
+    "react-image-gallery": "^1.2.7",
+    "react-medium-image-zoom": "^4.3.7",
     "react-social-login-buttons": "^3.6.0",
     "reactjs-popup": "^2.0.5"
   },
