--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-relay": "^14.0.0",
     "react-social-login-buttons": "^3.6.0",
     "reactjs-popup": "^2.0.5",
-    "relay-hooks": "^7.1.0"
+    "relay-hooks": "^7.1.0",
+    "swr": "^1.3.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
