--- a/.env
+++ b/.env
@@ -1,18 +1,19 @@
-NEXT_PUBLIC_ADMIN_EMAIL=soueuaqui123456789@gmail.com
+NEXT_PUBLIC_ADMIN_EMAIL=adminemail@email.com
 NEXTAUTH_URL=http://127.0.0.1:3000
 # VERCEL_URL=https://nogueira-bar-web-site.vercel.app
 FDS_SECRET=BWQ09Rr1E5EWtn93xEeJO7PzwTr6LPM/qxKR4SYSaBs=
 
-GOOGLE_ID='660539645218-3njomnurd1ta7f7ml162v8ruq8dl80s7.apps.googleusercontent.com'
-GOOGLE_SECRET=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
+GOOGLE_ID='googleId'
+GOOGLE_SECRET=GOOGLE_SECRET_KEY
 EMAIL_SERVER_USER=apikey
-EMAIL_SERVER_PASSWORD=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
+EMAIL_SERVER_PASSWORD=DASJHDSADSA
 EMAIL_SERVER_HOST=smtp.sendgrid.net
 EMAIL_SERVER_PORT=587
-EMAIL_FROM=soueuaqui123456789@gmail.com
-FACEBOOK_CLIENT_ID="1002990557255096"
-FACEBOOK_CLIENT_SECRET="104218c08e478c0f3b29b2401b8e7105"
+EMAIL_FROM=EmailSender
+FACEBOOK_CLIENT_ID="1"
+FACEBOOK_CLIENT_SECRET="1"
 
 
-DATABASE_URL='mysql://yzxrwqn73m3w:pscale_pw_-phI5hncnQUB5lmNffshsTJy5XykpCmSsMb9_OCm45Q@op325cr2ht3v.eu-central-1.psdb.cloud/nogueirabar?sslaccept=strict'
+DATABASE_URL=''
+
 
